Upadtes page to add more comments and fix small layout issues and finished about me page

--- a/scr/CSS/main.css
+++ b/scr/CSS/main.css
@@ -428,6 +428,59 @@ body::-webkit-scrollbar {
   }
 }
 
+#about {
+  background-color: #f7f7ff;
+}
+
+#about .title {
+  background-color: #f7f7ff;
+  border-bottom: 1px solid #070600;
+  text-align: center;
+  -webkit-padding-before: 0.83em;
+          padding-block-start: 0.83em;
+  -webkit-padding-after: 0.83em;
+          padding-block-end: 0.83em;
+}
+
+#about #body {
+  margin: 0 auto;
+  width: 90%;
+  text-align: center;
+}
+
+#about #body #aboutBody a {
+  font-weight: bold;
+  font-size: 1em;
+}
+
+#about #history {
+  margin: 0 auto;
+  width: 90%;
+  text-align: center;
+}
+
+#about #skills {
+  margin: 0 auto;
+  width: 90%;
+  text-align: center;
+}
+
+#about #skills a {
+  font-weight: bold;
+  font-size: 1em;
+}
+
+@media screen and (max-width: 300px) {
+  #about #body, #about #history, #about #skills {
+    font-size: 75%;
+    margin: 0 auto;
+    width: 95%;
+  }
+  #about #body ul, #about #history ul, #about #skills ul {
+    padding-left: 20px;
+  }
+}
+
 .blogs #blogs {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -500,43 +553,54 @@ body::-webkit-scrollbar {
 }
 
 .blogs #blogs article .card #blog {
+  width: 100%;
   height: 100%;
   -o-object-fit: scale-down;
      object-fit: scale-down;
 }
 
+@media screen and (max-width: 300px) {
+  .blogs #blogs article .card #blog {
+    width: 100%;
+    display: none;
+  }
+  .blogs #blogs article .card .realimg {
+    display: none;
+  }
+  .blogs #blogs article .card .fakeimg {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .blogs #blogs article .card .realimg {
+    height: 10em;
+  }
+}
+
 @media screen and (max-width: 800px) {
-  .blogs #blogs article, .blogs #blogs #main {
+  .blogs #blogs article {
     width: 100%;
     padding: 0;
   }
 }
 
-@media screen and (max-width: 500px) {
-  .blogs #blogs #blog {
-    width: 100%;
-  }
-  .blogs #blogs .realimg {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
+.contact-section
+h1 {
+  text-align: center;
 }
 
-.contact-section form {
+form {
   width: 100%;
   height: 60vh;
 }
 
-.contact-section form h1 {
+form h1 {
   text-align: center;
+  margin-left: auto;
 }
 
-.contact-section form fieldset {
+form fieldset {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -552,7 +616,7 @@ body::-webkit-scrollbar {
   height: 100%;
 }
 
-.contact-section form fieldset div {
+form fieldset div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -564,30 +628,30 @@ body::-webkit-scrollbar {
       align-content: flex-start;
 }
 
-.contact-section form fieldset h3 {
+form fieldset h3 {
   margin: 0;
   margin-bottom: 5px;
 }
 
-.contact-section form fieldset .name input {
+form fieldset .name input {
   width: 50%;
   height: 2em;
 }
 
-.contact-section form fieldset .email input {
+form fieldset .email input {
   width: 50%;
   height: 2em;
 }
 
-.contact-section form fieldset .message {
+form fieldset .message {
   height: 40%;
 }
 
-.contact-section form fieldset .message textarea {
+form fieldset .message textarea {
   height: 100%;
 }
 
-.contact-section form fieldset .message .submit {
+form fieldset .message .submit {
   width: 10em;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -599,7 +663,7 @@ body::-webkit-scrollbar {
   width: 100vw;
 }
 
-#pastWork .firstProject {
+#pastWork #post {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -638,61 +702,15 @@ body::-webkit-scrollbar {
   width: 49%;
 }
 
-#pastWork .placeHolder {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  border-bottom: 1px solid #070600;
-}
-
 @media screen and (max-width: 600px) {
-  #pastWork {
-    width: 100vw;
-  }
-  #pastWork .firstProject {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 100%;
-    border-bottom: 1px solid #070600;
-  }
   #pastWork .img {
-    width: 49%;
-    height: 400px;
     display: none;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
   #pastWork #workBody {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     width: 100%;
-  }
-  #pastWork .placeHolder {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 100%;
-    border-bottom: 1px solid #070600;
   }
 }
 /*# sourceMappingURL=main.css.map */
